@startuml
skinparam classAttributeIconSize 0
hide circle
title ListPetTreatmentsCommand Class Diagram

' =====================
' Classes
' =====================

interface "<<interface>>\nCommand" as Command {
    + exec(args : String) : void
}

class ListPetTreatmentsCommand {
    - {static} LOGGER : Logger
    + ListPetTreatmentsCommand(pets : PetList)
    + exec(args : String) : void
}

class PetList {
    + getPetByName(name : String) : Pet
    + size() : int
    + get(index : int) : Pet
}

class Pet {
    - name : String
    - treatments : ArrayList<Treatment>
    + getName() : String
    + getTreatments() : ArrayList<Treatment>
}

class Treatment {
    - type : String
    - date : LocalDate
    - note : String
    - isCompleted : boolean
    + getType() : String
    + getDate() : LocalDate
    + isCompleted() : boolean
    + toString() : String
}

class Ui {
    + printHeader(header : String) : void
    + printList(list : ArrayList<T>) : void
}

' =====================
' Relationships
' =====================

ListPetTreatmentsCommand .|> Command
ListPetTreatmentsCommand --> PetList
ListPetTreatmentsCommand ..> Ui
PetList "1" *-- "*" Pet : contains >
Pet "1" *-- "*" Treatment : has >
@enduml